<?xml version="1.0"?>
<package>
  <name>ihmc_multisense</name>
  <version>0.1.0</version>
  <description>IHMC Multisense package</description>

  <author email="dstephen@ihmc.us">Doug Stephen</author>
  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>laser_assembler</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>laser_assembler</run_depend>
  <run_depend>multisense_bringup</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ihmc_ros_common</run_depend>

</package>