<?xml version="1.0"?>
<package>
  <name>ihmc_multisense_tools</name>
  <version>0.7.10</version>
  <description>The ihmc_multisense_tools package contains common tools for the Multisense series of sensor heads.</description>

  <maintainer email="dstephen@ihmc.us">Doug Stephen</maintainer>

  <license>Apache 2.0</license>

  <!--<url type="website">http://github.com/ihmcrobotics/ihmc_ros_core</url>-->

  <author email="dstephen@ihmc.us">Doug Stephen</author>

  <export>
	<metapackage />
  </export>

  <buildtool_depend>catkin</buildtool_depend>

</package>